Integrated TestFx and checked it worked with Jave 25 and JUnit 6