@@ -15,6 +15,7 @@
 		<maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
 		<javafx.version>25.0.4</javafx.version>
 		<apache.poi.version>5.5.1</apache.poi.version>
+		<testfx.version>4.0.18</testfx.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +61,12 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>${testfx.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -89,6 +96,13 @@
 						au.edu.eq.questionbank/au.edu.eq.questionbank.output=ALL-UNNAMED
 						--add-opens
 						au.edu.eq.questionbank/au.edu.eq.questionbank.importer=ALL-UNNAMED
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank.ui=ALL-UNNAMED
+						--add-exports
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-opens
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--enable-native-access=javafx.graphics
 					</argLine>
 				</configuration>
 			</plugin>
